--- a/index.html
+++ b/index.html
@@ -14,20 +14,12 @@
           <div class="spinner__face js-active" data-bg="#27323c">
             <div class="content" data-type="iceland">
               <div class="content__left">
-                <h1>ICELAND<br /><span>EUROPE</span></h1>
+                <h1>Мондштадт<br /><span>Германия</span></h1>
               </div>
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                    “As I flew north to begin my third circuit of Iceland in
-                    four years, I was slightly anxious. The number of visitors
-                    to Iceland has doubled in that period, and I feared this
-                    might mean a little less magic to go around. At the end of
-                    this trip, 6000km later, I'm thrilled to report that the
-                    magic levels remain high. It's found in glorious football
-                    victories and Viking chants, kayaking among icebergs,
-                    sitting with puffins under the midnight sun and crunching
-                    across brand-new lava fields.”
+                   «Мондштадт» в переводе с немецкого — «Лунный город». Архитектура Мондштадта вдохновлена фахверковой постройкой домов, наиболее распространенной в Германии. Де-факто правящим органом Мондштадта являются Ордо Фавониус, что отражает Тевтонский Орден, в котором Великий Магистр Ордена является главой государства.
                   </p>
                   <p>– Carolyn Bain</p>
                 </div>
