--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                   «Мондштадт» в переводе с немецкого — «Лунный город». Архитектура Мондштадта вдохновлена фахверковой постройкой домов, наиболее распространенной в Германии. Де-факто правящим органом Мондштадта являются Ордо Фавониус, что отражает Тевтонский Орден, в котором Великий Магистр Ордена является главой государства.
+                   «Мондштадт» в переводе с немецкого — «Лунный город». 
+                    Архитектура Мондштадта вдохновлена фахверковой постройкой домов, наиболее распространенной в Германии. 
+                    Де-факто правящим органом Мондштадта являются Ордо Фавониус, что отражает Тевтонский Орден, 
+                    в котором Великий Магистр Ордена является главой государства.
                   </p>
                   <p>– Carolyn Bain</p>
                 </div>
