--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                   «Мондштадт» в переводе с немецкого — «Лунный город». 
-                    Архитектура Мондштадта вдохновлена фахверковой постройкой домов, наиболее распространенной в Германии. 
-                    Де-факто правящим органом Мондштадта являются Ордо Фавониус, что отражает Тевтонский Орден, 
-                    в котором Великий Магистр Ордена является главой государства.
+                  «Мондштадт» в переводе с немецкого — «Лунный город». 
+                  «Город свободы, расположенный в северо-восточной части Тейвата.
+                  С гор и просторных равнин беззаботный ветерок доносит аромат одуванчиков — дар Анемо Архонта, 
+                  Барбатоса — через Сидровое озеро в Мондштадт, расположенный на острове посреди озера.»
                   </p>
-                  <p>– Carolyn Bain</p>
+                  <p>– Венти</p>
                 </div>
                 <h3 class="content__index">01</h3>
               </div>
@@ -33,19 +33,18 @@
           <div class="spinner__face" data-bg="#19304a">
             <div class="content" data-type="china">
               <div class="content__left">
-                <h1>CHINA<br /><span>ASIA</span></h1>
+                <h1>Ли Юэ<br /><span>Китай</span></h1>
               </div>
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                    “Its modern face is dazzling, but China is no one-trick
-                    pony. The world's oldest continuous civilisation isn't all
-                    smoked glass and brushed aluminium and while you won't be
-                    tripping over artefacts – three decades of round-the-clock
-                    development and rash town-planning have taken their toll –
-                    rich seams of antiquity await.”
+                     Ли Юэ (кит. 璃月 Líyuè, «Стеклянная луна») — одно из семи королевств Тейвата. 
+                    «Богатый портовый город, расположенный в восточной части континента Тейват.
+                    Ландшафт Ли Юэ формируют гордо возвышающиеся скалистые горы и каменные леса, обширные равнины и оживлённые побережья. 
+                    Климат этих земель круглый год переливается пёстрыми цветами и красками. 
+                    Помимо каменисто-скалистых чудес Ли Юэ, местные жители также наслаждаются щедрыми дарами архонта земли в виде драгоценных камней и минералов.»
                   </p>
-                  <p>– Damian Harper</p>
+                  <p>– Чжун Ли</p>
                 </div>
                 <h3 class="content__index">02</h3>
               </div>
@@ -54,21 +53,17 @@
           <div class="spinner__face" data-bg="#2b2533">
             <div class="content" data-type="usa">
               <div class="content__left">
-                <h1>USA<br /><span>NORTH AMERICA</span></h1>
+                <h1>Инадзума<br /><span>Япония</span></h1>
               </div>
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                    “When it comes to travel, America has always floored me with
-                    its staggering range of possibilities. Not many other
-                    countries have so much natural beauty – mountains, beaches,
-                    rainforest, deserts, canyons, glaciers – coupled with
-                    fascinating cities to explore, an unrivaled music scene and
-                    all the things that make travel so rewarding (friendly
-                    locals, great restaurants and farmers markets, and plenty of
-                    quirky surprises).”
+                   Инадзума (яп. 稲妻 Inazuma, «Молния») — одно из семи королевств Тейвата.
+                    «Закрытый архипелаг далеко на востоке от Тейвата.
+                    Преодолейте бесчисленные грозы и ступите на острова под сень багряных клёнов и пурпурных сакур. 
+                    Среди песчаных отмелей, обрывистых пиков и уединенных горных рощ вы можете увидеть, как стремится к вечности Наруками Огосё.»
                   </p>
-                  <p>– Regis St Louis</p>
+                  <p>– Райден</p>
                 </div>
                 <h3 class="content__index">03</h3>
               </div>
@@ -77,23 +72,20 @@
           <div class="spinner__face" data-bg="#312f2d">
             <div class="content" data-type="peru">
               <div class="content__left">
-                <h1>PERU<br /><span>SOUTH AMERICA</span></h1>
+                <h1>Сумеру<br /><span>Индия/Египет</span></h1>
               </div>
               <div class="content__right">
                 <div class="content__main">
                   <p>
-                    “For me, Peru is the molten core of South America, a
-                    distillation of the oldest traditions and the finest
-                    building, weaving and art made by the most sophisticated
-                    cultures on the continent. In Peru the wildest landscapes –
-                    from frozen Andean peaks to the deep Amazon – help us
-                    re-forge our connection to the natural world. It is also a
-                    cultural stew, where diverse peoples live side by side,
-                    negotiating modern life with humor and aplomb. Beyond that,
-                    the cuisine alone makes it worth the trip. Every return is
-                    rich and surprising.”
+                  Ландшафт Сумеру довольно разнообразный и включает в себя как тропические леса, 
+                  так и пустыни, которая занимает бо́льшую часть региона.
+                  Статуя семи Архонтов в этом регионе изображает женскую фигуру, выглядящую как ребёнок.
+                  На ней висит нечто, похожее на плащ и ниспадающая одежда. 
+                  Фигура статуи изображена сидящей на большом листе дерева, являющимся атрибутом мантии Дендро Архонта.
+
+
                   </p>
-                  <p>– Carolyn McCarthy</p>
+                  <p>– Нахида</p>
                 </div>
                 <h3 class="content__index">04</h3>
               </div>
