--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     Преодолейте бесчисленные грозы и ступите на острова под сень багряных клёнов и пурпурных сакур. 
                     Среди песчаных отмелей, обрывистых пиков и уединенных горных рощ вы можете увидеть, как стремится к вечности Наруками Огосё.»
                   </p>
-                  <p>– Райден</p>
+                  <p>– Райден Эи</p>
                 </div>
                 <h3 class="content__index">03</h3>
               </div>
